--- a/LECTURE13.html
+++ b/LECTURE13.html
@@ -668,7 +668,7 @@ Lambda for source population [lambda good]: 2.1</p>
 <blockquote>
 <p>The nearby sink patch is now extremely attractive to our focal species- since it contains abundant food resources and what seems like good shelter! However, in this habitat there is also a novel, introduced predator that the species is unable to detect. Therefore, dispersal rates to the sink habitat are very high, but mortality rates are also very high.</p>
 </blockquote>
-<p>To force a disproportionate number of individuals into the nearby sink, open the equation editor for the flow from the source to the nearby sink. Change the first line to read:</p>
+<p>To force a disproportionate number of individuals into the nearby sink, open the equation editor for the flow from the source to the nearby sink. Change the equation to:</p>
 <pre><code>0.01*[nearby sink] - 0.5*[SOURCE]</code></pre>
 <p>NOTE: you can “comment out” what was previously in the equation editor for this flow. To do this, you can either use pound symbols like we have done in the past (and like R!) or we can bracket a whole block of code using the following syntax:</p>
 <pre><code>/*  
@@ -679,7 +679,7 @@ some more
 random code
 */</code></pre>
 <p>This will force 50% of the source population to try to move to the sink habitat each year! Nearly all individuals that are in the sink habitat will attempt to stay there.</p>
-<p>Also, change the lambda for the nearby sink to 0.25, (meaning 75% of the sink population dies each year due to predation). To do this, replace the [lambda bad] term in the births/deaths flow for the nearby sink with the number “0.25”. Open the equation editor for this flow- after you change, it should look something like this:</p>
+<p>Also, change the lambda for the nearby sink to 0.25, (meaning 75% decline each year due to predation). To do this, replace the [lambda bad] term in the births/deaths equation for the nearby sink with the number “0.25”. Open the equation editor for this flow- after you change, it should look something like this:</p>
 <pre><code>growth &lt;- [nearby sink]*Ln(0.25)
 
 totalexp &lt;- [nearby sink]+growth   # expected population size
