--- a/LECTURE15.html
+++ b/LECTURE15.html
@@ -14,8 +14,8 @@
 
 <title>Parameter estimation</title>
 
-<script src="site_libs/header-attrs-2.10/header-attrs.js"></script>
-<script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
+<script src="site_libs/header-attrs-2.11/header-attrs.js"></script>
+<script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/spacelab.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
@@ -513,13 +513,7 @@ div.tocify {
 <h3>Capture-mark-recapture (CMR)</h3>
 <p><strong>PROS</strong> - Can estimate survival, variation in survival, lambda, recruitment, dispersal rates. - Probably the most widely used source of data for population models!</p>
 <p><strong>CONS</strong> - Few downsides, although the analytical techniques can be difficult to master - Mounting a proper CMR study can be very costly, and require many years of data. - Estimating landscape-scale movements can require an even more costly and time-consuming study. - Emigration and survival can be difficult to tease apart in many cases.</p>
-<p>See below for more! Also this is the main focus of the Population Dynamics course (NRES 488, the next course in the Wildlife Ecology and Conservation sequence!)</p>
-</div>
-<div id="data-on-spatial-structurehabitat" class="section level3">
-<h3>Data on spatial structure/habitat</h3>
-<ul>
-<li>See <a href="FINAL_PROJECTS.html">links</a> on Final projects page</li>
-</ul>
+<p>We will return to CMR data shortly (and in the optional Lab 7), but first…</p>
 </div>
 <div id="what-if-theres-no-data" class="section level3">
 <h3>What if there’s “no data”?</h3>
@@ -587,7 +581,8 @@ div.tocify {
 <h2>Aside- is expert opinion okay to use???</h2>
 <ul>
 <li>Not ideal, because it is hard or impossible to validate, and hard to document, but …</li>
-<li>That is what will be done in any case!</li>
+<li>That is often the default in practice<br />
+</li>
 <li>And it is better to use it than to do nothing</li>
 <li>And it is better to document that expert opinion was used than to proceed with conservation planning in the absence of stating sources and assumptions</li>
 <li>It is a starting point (and sometimes a reasonable one)</li>
