--- a/LAB7.html
+++ b/LAB7.html
@@ -475,7 +475,7 @@ div.tocify {
 <h3>Closed-population models</h3>
 <ul>
 <li><p><em>two visits</em> – Lincoln-Petersen model</p></li>
-<li><p><em>several visits</em> (k&gt;2) – Schnabel and Schumacher-Eschmeyer models – and other models that can be run via program CAPTURE (which can be run through Program MARK).</p></li>
+<li><p><em>several visits</em> (k&gt;2) – Schnabel model – and other models that can be run via program CAPTURE (which can be run through Program MARK).</p></li>
 </ul>
 <div id="lincoln-petersen-model-l-p-estimating-abundance-on-the-basis-of-two-site-visits" class="section level4">
 <h4>LINCOLN-PETERSEN MODEL (L-P) (estimating abundance on the basis of two site visits!)</h4>
@@ -486,24 +486,18 @@ div.tocify {
 <p><span class="math inline">\(\frac{R}{C} = \frac{M}{N}\)</span></p>
 <p>where <span class="math inline">\(N\)</span> is the total population size. Solving for <span class="math inline">\(N\)</span> yields the estimator:</p>
 <p><span class="math inline">\(\hat N=\frac{C\cdot M}{R} \qquad \text{(Eq. 1)}\)</span></p>
-<p><strong>Q</strong> What is the estimate of per-capita capture probability (<span class="math inline">\(p\)</span>) in the L-P estimator?? This is the same as asking- what proportion of the total population was marked in the first visit?</p>
-<p><span class="math inline">\(p = \frac{R}{C}\)</span></p>
-<p><span class="math inline">\(\hat N = p \cdot N+(1-p)\cdot N\)</span></p>
-<p><span class="math inline">\(\hat N=\frac{R}{C}\cdot N+(1-\frac{R}{C})\cdot N\)</span></p>
-<p><span class="math inline">\(M=\frac{R}{C}\cdot N = p \cdot N\)</span></p>
-<p><span class="math inline">\(\hat N=\frac{M}{p}=\frac{C\cdot M}{R}\)</span></p>
 <p>Imagine we were to capture 10 individuals during our first visit (<span class="math inline">\(M=10\)</span>) and 8 individuals during our second visit (<span class="math inline">\(C=10\)</span>). Of the 8 individuals captured in our second visit, 4 had been marked in the first visit. Therefore, <span class="math inline">\(p=\frac{R}{C}=0.5\)</span>. Another way of saying this is that for every individual we observed during the first site visit, we were likely to have missed one individual.</p>
 <p>To estimate abundance, we add up the total number of individuals we saw during our first visit and the total number of individuals we missed during our first visit- this should represent the entire population!</p>
-<p>The lower our estimate of <span class="math inline">\(p\)</span> (fraction of the total population marked in the first visit, derived from observations from the second visit), the more individuals we probably missed (failed to observe) in the first visit.</p>
 <p><strong>Q:</strong> How many individuals did we miss in this case?</p>
 <p><strong>Q:</strong> What is the total abundance?</p>
+<p>The lower the fraction of the total population marked in the first visit (estimated as <span class="math inline">\(\frac{R}{C}\)</span>), the more individuals we probably missed (failed to observe) in the first visit.</p>
 <p><strong>Q:</strong> What if we had only observed 2 (out of 8) marked individuals during the second visit?</p>
-<p>NOTE: If sample size is small, the basic L-P estimator can be biased. For example, what happens if the number of recaptures is zero?</p>
+<p>NOTE: If sample size is small, the basic L-P estimator can be biased. For example, what happens if the number of recaptures in the second sample is zero?</p>
 <p>A modified version with less bias was originally developed by Chapman (1951) and is commonly called the <em>modified Petersen estimate</em> or the <em>Chapman estimator</em>:</p>
 <p><span class="math inline">\(\hat N=\frac{(M+1)(C+1)}{R+1}-1 \qquad \text{(Eq. 2)}\)</span></p>
 <p>This formula is a <strong>statistic</strong> estimating total population size on the basis of a <strong>sample</strong> (see <a href="LECTURE15.html">lecture on parameter estimation</a> for more).</p>
 <p>We still need to make inference about the <strong>parameter</strong>, <span class="math inline">\(N\)</span>, on the basis of the statistic, <span class="math inline">\(\hat N\)</span>.</p>
-<p>To do this, we need to understand the <strong>sampling uncertainty</strong> for this statistic (we need to ask: “what do we <em>really</em> know about the population, and what don’t we know?”. That is, if we collected a different sample from the <em>same population</em>, we might get a very different answer for <span class="math inline">\(N\)</span>. If we took 100 or 1000 different samples, we might get 100 or 1000 different estimates for <span class="math inline">\(N\)</span>!! The variation among these estimates is the sampling uncertainty.</p>
+<p>To do this, we need to understand the <strong>sampling uncertainty</strong> for this statistic (we need to ask: “what do we <em>really</em> know about the population, and what don’t we know?”). That is, if we collected a different sample from the <em>same population</em>, we might get a very different answer for <span class="math inline">\(N\)</span>. If we took 100 or 1000 different samples, we might get 100 or 1000 different estimates for <span class="math inline">\(N\)</span>!! The variation among these estimates is the sampling uncertainty.</p>
 <p>For the Lincoln-Peterson estimator, our uncertainty about this estimate (sampling variance) can be computed as:</p>
 <p><span class="math inline">\(Var(\hat N)=\frac{(M+1)(C+1)(M-R)(C-R)}{(R+1)^2(R+2)} \qquad \text{(Eq. 3)}\)</span></p>
 <p>This formula technically represents <em>Sampling Variance</em>, which is a common way to represent parameter uncertainty in statistics.</p>
@@ -534,8 +528,8 @@ div.tocify {
 <p>What about the sampling variance? It can be computed as:</p>
 <p><span class="math inline">\(Var(\frac{1}{\hat N})=\frac{\sum{R_t}}{(\sum{(C_tM_t))^2}} \qquad \text{(Eq. 7)}\)</span></p>
 <p>Note that this formula gives you the sampling uncertainty (variance) for the <em>inverse</em> of N (<span class="math inline">\(\frac{1}{N}\)</span>)!</p>
-<p><strong>Q</strong> How do we compute a confidence interval around <span class="math inline">\(\hat N\)</span>??</p>
-<p>One simple way to is to first compute a confidence interval on the inverse of N using the same method described above (take square root of the variance, and then ):</p>
+<p>How do we compute a confidence interval around <span class="math inline">\(\hat N\)</span>??</p>
+<p>One simple way to is to first compute a confidence interval on the <em>inverse of N</em> using the same method described above (take square root of the variance):</p>
 <p><span class="math inline">\(\frac{1}{\hat N} \pm 1.965 * \sqrt[](Var(\frac{1}{\hat N})) \qquad \text{(Eq. 8)}\)</span></p>
 <p>To compute the confidence interval for N, take the inverse of the lower and upper bounds (limits) of the confidence interval computed above!</p>
 </div>
@@ -580,7 +574,6 @@ head(read.csv(&quot;simple_closed.csv&quot;))</code></pre>
 <div id="tutorial-working-with-open-populations" class="section level4">
 <h4>TUTORIAL: working with open populations!</h4>
 <p>For this exercise, we will use the classic European Dipper data!</p>
-<p>NOTE: Program MARK is a Windows-based software. If you’re running MacOS, you can run MARK using a Windows partition or a Windows emulator. However, you don’t need to use Program MARK for this lab exercise – you can use R instead!</p>
 <p>The ‘marked’ package in R runs many of the same open-population models, and is much easier to use than Program MARK. Please install this package if haven’t already done so.</p>
 <p>These data should look like this! Here it is in R (just the first 15 lines)!</p>
 <pre><code>##    h1 h2 h3 h4 h5 h6 h7
@@ -971,12 +964,12 @@ errbar(1:nrow(Phi_by_year),Phi_by_year$estimate,Phi_by_year$ucl,Phi_by_year$lcl,
 <p>2c. Use the results from the time-dependent model [phi(t)p(t)] to estimate the mean per-capita survival rate and the <em>environmental stochasticity</em> (annual variation) in survival for European dippers. In other words, what is the mean and standard deviation for the Normal random number generator you would you use to represent annual variation in survival for this population? Explain how you obtained your answer!</p>
 <p>##Checklist for Lab 7 completion</p>
 <ul>
-<li><p>Please prepare all written responses in a single Word document and submit <em>using WebCampus</em>!</p></li>
-<li><p>Where appropriate, Excel files and R scripts can be included as part of your lab submission (can be submitted separately in WebCampus .</p></li>
+<li><p>Please enter all written responses in Top Hat and submit!</p></li>
+<li><p>Where appropriate, Excel files and R scripts can be included as part of your lab submission (can be submitted separately in top hat.</p></li>
 </ul>
-<p><strong><em>This lab is optional. For extra credit please submit by Wednesday May 6</em></strong></p>
+<p><strong><em>This lab is optional. For extra credit please submit by Friday Apr 29</em></strong></p>
 <ul>
-<li>Word document with short answers, and Excel document
+<li>Short answers, and Excel document
 <ul>
 <li><strong>Exercise 1</strong>
 <ul>
