--- a/LECTURE16.html
+++ b/LECTURE16.html
@@ -14,8 +14,8 @@
 
 <title>Species interactions: competition!</title>
 
-<script src="site_libs/header-attrs-2.10/header-attrs.js"></script>
-<script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
+<script src="site_libs/header-attrs-2.11/header-attrs.js"></script>
+<script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/spacelab.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
@@ -648,7 +648,6 @@ points(jitter(System3[,1],500),jitter(System3[,2],500),col=&quot;blue&quot;,pch=
 abline(h=K2,v=K1,col=&quot;gray&quot;,lwd=2,lty=2)</code></pre>
 <p><img src="LECTURE16_files/figure-html/unnamed-chunk-9-1.png" width="672" /></p>
 <p><strong>Q</strong>: Does this two-species system have a stable equilibrium?</p>
-<pre><code>## Warning: package &#39;deSolve&#39; was built under R version 3.6.3</code></pre>
 <div id="working-in-the-phase-plane" class="section level3">
 <h3>Working in the phase plane!</h3>
 <p>There is a lot you can learn about an interacting two-species system by working with the phase plane.</p>
